<?xml version="1.0"?>
<package format="2">
  <name>ada_adjustable_playback</name>
  <version>0.1.0</version>
  <description>The ada_adjustable_playback package</description>

  <maintainer email="reubena@andrew.cmu.edu">Reuben Aronson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>boost</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>libogre-dev</depend>
  <depend>libqt5-dev</depend>
  
  <depend>or_urdf</depend>
  <depend>or_rviz</depend>
  
  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>
</package>
